buildscript {
    apply from: 'https://raw.githubusercontent.com/comodal/gradle-conf/master/plugins.gradle'
    apply from: 'https://raw.githubusercontent.com/comodal/gradle-conf/master/java/plugins.gradle'
    dependencies {
        classpath "$axion"
        classpath "$bintray"
        classpath "$jmh"
    }
}

ext {
    desc = 'Java 9 Loading Cache'
}
apply from: 'https://raw.githubusercontent.com/comodal/gradle-conf/master/java/travisci.gradle'
apply from: 'https://raw.githubusercontent.com/comodal/gradle-conf/master/java/java.gradle'
//apply from: 'https://raw.githubusercontent.com/comodal/gradle-conf/master/axion.gradle'
apply from: 'https://raw.githubusercontent.com/comodal/gradle-conf/master/comodal.gradle'
apply from: 'https://raw.githubusercontent.com/comodal/gradle-conf/master/java/bintray-maven.gradle'
apply from: 'https://raw.githubusercontent.com/comodal/gradle-conf/master/java/checks.gradle'
apply from: 'https://raw.githubusercontent.com/comodal/gradle-conf/master/java/jmh.gradle'

tasks.withType(Test) {
    jvmArgs += ['--add-opens=java.base/java.lang=ALL-UNNAMED']
}

sourceCompatibility = JavaVersion.VERSION_1_9

repositories {
    maven { url "http://oss.sonatype.org/content/repositories/snapshots" }
}

configurations.all {
    resolutionStrategy.cacheDynamicVersionsFor 60, 'minutes'
    resolutionStrategy.cacheChangingModulesFor 60, 'minutes'
}

dependencies {
    jmh 'com.github.ben-manes.caffeine:caffeine:+'
    jmh 'org.cache2k:cache2k-api:+'
    jmh 'org.cache2k:cache2k-core:+'
}

sourceSets {
    main {
        java {
            srcDir 'src/systems.comodal.collision/java'
        }
    }
    test {
        java {
            srcDir 'src/unit/java'
        }
    }
}
